--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
+@font-face {
+  font-family: 'Bebas Neue';
+  src: local("Bebas Neue Regular Regular"), local("BebasNeueRegular"), url("../fonts/BebasNeueRegular.woff2") format("woff2"), url("../fonts/BebasNeueRegular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-.body {
-  font-family: 'Roboto', sans-serif;
 }
 
 .header {
@@ -77,4 +81,92 @@
   line-height: 20px;
   text-decoration: none;
   color: #fff;
+}
+
+.main {
+  max-width: 1280px;
+  margin: auto;
+  padding-top: 54px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main .home-image path {
+  opacity: 0;
+  cursor: pointer;
+}
+
+.main .home-image path:hover {
+  opacity: 1;
+}
+
+.main .main-info {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .main-info .main-title {
+  margin: 0;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: normal;
+  font-size: 37px;
+  line-height: 44px;
+  color: #635854;
+}
+
+.main .main-info .counter-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .main-info .counter-group .counter {
+  font-family: "Bebas Neue", sans-serif;
+  color: #636363;
+  font-size: 66px;
+}
+
+.main .main-info .counter-group .counter-button {
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.main .main-info .counter-group .counter-button .counter-arrow-down {
+  -webkit-transform: rotateX(180deg);
+          transform: rotateX(180deg);
+}
+
+.main .main-info .button-primary {
+  background-color: #3596f5;
+  border-radius: 6px;
+  color: #fff;
+  border: none;
+  padding: 16px 36px;
+  cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
 }
