--- a/css/style.sass
+++ b/css/style.sass
@@ -1,7 +1,14 @@
+
+@font-face
+    font-family: 'Bebas Neue'
+    src: local('Bebas Neue Regular Regular'), local('BebasNeueRegular'),
+    url("../fonts/BebasNeueRegular.woff2") format('woff2'),
+    url("../fonts/BebasNeueRegular.woff") format('woff')
+    font-weight: normal
+    font-style: normal
+    font-display: swap
 *
     box-sizing: border-box
-.body
-    font-family: 'Roboto', sans-serif
 
 .header
     background-color: #635854
@@ -47,3 +54,52 @@
                 line-height: 20px
                 text-decoration: none
                 color: #fff
+
+.main
+    max-width: 1280px
+    margin: auto
+    padding-top: 54px
+    display: flex
+    .home-image
+        path
+            opacity: 0
+            cursor: pointer
+        path:hover
+            opacity: 1
+    .main-info
+        flex-grow: 1
+        text-align: center
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        align-items: center
+        .main-title
+            margin: 0
+            font-family: "Bebas Neue", sans-serif
+            font-weight: normal
+            font-size: 37px
+            line-height: 44px
+            color: #635854
+        .counter-group
+            display: flex
+            flex-direction: column
+            align-items: center
+            .counter
+                font-family: "Bebas Neue", sans-serif
+                color: #636363
+                font-size: 66px
+            .counter-button
+                background-color: #fff
+                border: none
+                cursor: pointer
+                .counter-arrow-down
+                    transform: rotateX(180deg)
+        .button-primary
+            background-color: #3596f5
+            border-radius: 6px
+            color: #fff
+            border: none
+            padding: 16px 36px
+            cursor: pointer
+            font-family: 'Roboto', sans-serif
+            font-size: 16px
