--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
   padding-top: 8px;
   padding-bottom: 8px;
   border-bottom: 4px solid #3596f5;
+  font-family: Roboto;
 }
 
 .header .navbar {
@@ -31,7 +32,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: Roboto;
 }
 
 .header .navbar .navbar-logo {
@@ -169,4 +169,98 @@
   cursor: pointer;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
+}
+
+.footer {
+  max-width: 1280px;
+  margin: 95px auto 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 50px 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  border-top: 4px solid #3596f5;
+}
+
+.footer .footer-logo {
+  margin-right: 37px;
+}
+
+.footer .footer-contacts {
+  margin-right: 59px;
+}
+
+.footer .footer-contacts .contacts-text {
+  display: block;
+  font-size: 14px;
+  line-height: 16px;
+  color: #635854;
+  margin-bottom: 4px;
+}
+
+.footer .footer-contacts .contacts-phone {
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 20px;
+  text-decoration: none;
+  color: #635854;
+}
+
+.footer .socials-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer .socials-list .socials-link {
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin-right: 15px;
+}
+
+.footer .socials-list .socials-link-facebook {
+  background: url(../img/icon-facebook.svg);
+}
+
+.footer .socials-list .socials-link-instagram {
+  background-image: url(../img/icon-instagram.svg);
+}
+
+.footer .socials-list .socials-link-twitter {
+  background-image: url(../img/icon-twitter.svg);
+}
+
+.footer .socials-list .socials-link-youtube {
+  background-image: url(../img/icon-youtube.svg);
+}
+
+.footer .about {
+  margin-left: auto;
+}
+
+.footer .about .about-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+.footer .about .about-list .about-item {
+  margin-left: 20px;
+}
+
+.footer .about .about-list .about-item .about-link {
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
 }
