--- a/css/style.sass
+++ b/css/style.sass
@@ -15,6 +15,7 @@
     padding-top: 8px
     padding-bottom: 8px
     border-bottom: 4px solid #3596f5
+    font-family: Roboto
     .navbar
         max-width: 1280px
         margin: auto
@@ -22,7 +23,6 @@
         min-height: 40px
         justify-content: space-between
         align-items: center
-        font-family: Roboto
         .navbar-logo
             display: flex
         .navbar-menu
@@ -103,3 +103,57 @@
             cursor: pointer
             font-family: 'Roboto', sans-serif
             font-size: 16px
+.footer
+    max-width: 1280px
+    margin: 95px auto 0
+    display: flex
+    justify-content: flex-start
+    align-items: center
+    padding: 50px 0
+    font-family: 'Roboto', sans-serif
+    font-size: 16px
+    border-top: 4px solid #3596f5
+    .footer-logo
+        margin-right: 37px
+    .footer-contacts
+        margin-right: 59px
+        .contacts-text
+            display: block
+            font-size: 14px
+            line-height: 16px
+            color: #635854
+            margin-bottom: 4px
+        .contacts-phone
+            font-weight: bold
+            font-size: 17px
+            line-height: 20px
+            text-decoration: none
+            color: #635854
+    .socials-list
+        display: flex
+        list-style: none
+        padding-left: 0
+        .socials-link
+            display: block
+            width: 20px
+            height: 20px
+            margin-right: 15px
+        .socials-link-facebook
+            background: url(../img/icon-facebook.svg)
+        .socials-link-instagram
+            background-image: url(../img/icon-instagram.svg)
+        .socials-link-twitter
+            background-image: url(../img/icon-twitter.svg)
+        .socials-link-youtube
+            background-image: url(../img/icon-youtube.svg)
+    .about
+        margin-left: auto
+        .about-list
+            display: flex
+            list-style: none
+            .about-item
+                margin-left: 20px
+                .about-link
+                    font-size: 16px
+                    line-height: 19px
+                    color: #635854
