--- a/css/style.sass
+++ b/css/style.sass
@@ -66,6 +66,8 @@
             cursor: pointer
         path:hover
             opacity: 1
+        .current-floor
+            opacity: 1
     .main-info
         flex-grow: 1
         text-align: center
