--- a/css/style.css
+++ b/css/style.css
@@ -176,8 +176,14 @@
 }
 
 .footer {
+  background-color: #D7D7D7;
+  border-top: 4px solid #3596f5;
+  margin-top: 95px;
+}
+
+.footer .wrapper {
+  margin: auto;
   max-width: 1280px;
-  margin: 95px auto 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -190,18 +196,17 @@
   padding: 50px 0;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  border-top: 4px solid #3596f5;
 }
 
-.footer .footer-logo {
+.footer .wrapper .footer-logo {
   margin-right: 37px;
 }
 
-.footer .footer-contacts {
+.footer .wrapper .footer-logo .footer-contacts {
   margin-right: 59px;
 }
 
-.footer .footer-contacts .contacts-text {
+.footer .wrapper .footer-logo .contacts-text {
   display: block;
   font-size: 14px;
   line-height: 16px;
@@ -209,7 +214,7 @@
   margin-bottom: 4px;
 }
 
-.footer .footer-contacts .contacts-phone {
+.footer .wrapper .footer-logo .contacts-phone {
   font-weight: bold;
   font-size: 17px;
   line-height: 20px;
@@ -217,7 +222,7 @@
   color: #635854;
 }
 
-.footer .socials-list {
+.footer .wrapper .socials-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -225,46 +230,182 @@
   padding-left: 0;
 }
 
-.footer .socials-list .socials-link {
+.footer .wrapper .socials-list .socials-link {
   display: block;
   width: 20px;
   height: 20px;
   margin-right: 15px;
 }
 
-.footer .socials-list .socials-link-facebook {
+.footer .wrapper .socials-list .socials-link-facebook {
   background: url(../img/icon-facebook.svg);
 }
 
-.footer .socials-list .socials-link-instagram {
+.footer .wrapper .socials-list .socials-link-instagram {
   background-image: url(../img/icon-instagram.svg);
 }
 
-.footer .socials-list .socials-link-twitter {
+.footer .wrapper .socials-list .socials-link-twitter {
   background-image: url(../img/icon-twitter.svg);
 }
 
-.footer .socials-list .socials-link-youtube {
+.footer .wrapper .socials-list .socials-link-youtube {
   background-image: url(../img/icon-youtube.svg);
 }
 
-.footer .about {
+.footer .wrapper .about {
   margin-left: auto;
 }
 
-.footer .about .about-list {
+.footer .wrapper .about .about-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   list-style: none;
 }
 
-.footer .about .about-list .about-item {
+.footer .wrapper .about .about-list .about-item {
   margin-left: 20px;
 }
 
-.footer .about .about-list .about-item .about-link {
+.footer .wrapper .about .about-list .about-item .about-link {
   font-size: 16px;
   line-height: 19px;
   color: #635854;
+}
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 0;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.modal .modal-dialog {
+  max-width: 1000px;
+  min-height: 565px;
+  background-color: #fff;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  opacity: 0;
+  -webkit-transform: translateY(-10%);
+          transform: translateY(-10%);
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+
+.modal .modal-dialog .modal-image {
+  background-color: #ebebeb;
+  width: 60%;
+  text-align: center;
+  padding: 50px;
+}
+
+.modal .modal-dialog .modal-image .modal-title {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 24px;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
+.modal .modal-dialog .modal-image .floor-image path {
+  opacity: 0;
+  cursor: pointer;
+}
+
+.modal .modal-dialog .modal-image .floor-image .current-flat {
+  opacity: 1;
+}
+
+.modal .modal-dialog .modal-info {
+  padding: 50px 46px;
+  width: 40%;
+}
+
+.modal .modal-dialog .modal-info .modal-title {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 24px;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
+.modal .modal-dialog .modal-info .flat-list {
+  padding: 0;
+  list-style: none;
+  margin-top: 55px;
+}
+
+.modal .modal-dialog .modal-info .flat-list .flat-item {
+  margin-bottom: 10px;
+}
+
+.modal .modal-dialog .modal-info .flat-list .flat-item .flat-link {
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+  text-decoration: none;
+}
+
+.modal .modal-dialog .modal-info .flat-list .flat-item .current-flat {
+  color: #3596f5;
+  text-decoration: underline;
+}
+
+.modal .modal-dialog .modal-info .modal-alert {
+  font-style: italic;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+  margin-top: 56px;
+}
+
+.modal .modal-dialog .modal-close-button {
+  position: absolute;
+  right: 27px;
+  top: 38px;
+  border: none;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.is-open {
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.is-open .modal-dialog {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
