--- a/css/style.sass
+++ b/css/style.sass
@@ -106,56 +106,146 @@
             font-family: 'Roboto', sans-serif
             font-size: 16px
 .footer
-    max-width: 1280px
-    margin: 95px auto 0
-    display: flex
-    justify-content: flex-start
-    align-items: center
-    padding: 50px 0
-    font-family: 'Roboto', sans-serif
-    font-size: 16px
+    background-color: #D7D7D7
     border-top: 4px solid #3596f5
-    .footer-logo
-        margin-right: 37px
-    .footer-contacts
-        margin-right: 59px
-        .contacts-text
-            display: block
-            font-size: 14px
-            line-height: 16px
-            color: #635854
-            margin-bottom: 4px
-        .contacts-phone
-            font-weight: bold
-            font-size: 17px
-            line-height: 20px
-            text-decoration: none
-            color: #635854
-    .socials-list
+    margin-top: 95px
+    .wrapper
+        margin: auto
+        max-width: 1280px
         display: flex
-        list-style: none
-        padding-left: 0
-        .socials-link
-            display: block
-            width: 20px
-            height: 20px
-            margin-right: 15px
-        .socials-link-facebook
-            background: url(../img/icon-facebook.svg)
-        .socials-link-instagram
-            background-image: url(../img/icon-instagram.svg)
-        .socials-link-twitter
-            background-image: url(../img/icon-twitter.svg)
-        .socials-link-youtube
-            background-image: url(../img/icon-youtube.svg)
-    .about
-        margin-left: auto
-        .about-list
+        justify-content: flex-start
+        align-items: center
+        padding: 50px 0
+        font-family: 'Roboto', sans-serif
+        font-size: 16px
+        .footer-logo
+            margin-right: 37px
+            .footer-contacts
+                margin-right: 59px
+            .contacts-text
+                display: block
+                font-size: 14px
+                line-height: 16px
+                color: #635854
+                margin-bottom: 4px
+            .contacts-phone
+                font-weight: bold
+                font-size: 17px
+                line-height: 20px
+                text-decoration: none
+                color: #635854
+        .socials-list
             display: flex
             list-style: none
-            .about-item
-                margin-left: 20px
-                .about-link
-                    font-size: 16px
-                    line-height: 19px
-                    color: #635854
+            padding-left: 0
+            .socials-link
+                display: block
+                width: 20px
+                height: 20px
+                margin-right: 15px
+            .socials-link-facebook
+                background: url(../img/icon-facebook.svg)
+            .socials-link-instagram
+                background-image: url(../img/icon-instagram.svg)
+            .socials-link-twitter
+                background-image: url(../img/icon-twitter.svg)
+            .socials-link-youtube
+                background-image: url(../img/icon-youtube.svg)
+        .about
+            margin-left: auto
+            .about-list
+                display: flex
+                list-style: none
+                .about-item
+                    margin-left: 20px
+                    .about-link
+                        font-size: 16px
+                        line-height: 19px
+                        color: #635854
+.modal
+    position: fixed
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    background-color: rgba(0, 0, 0, 0.8)
+    display: flex
+    justify-content: center
+    align-items: center
+    opacity: 0
+    transform: scale(0)
+    transition: all 0.2s
+    .modal-dialog
+        max-width: 1000px
+        min-height: 565px
+        background-color: #fff
+        flex-grow: 1
+        display: flex
+        position: relative
+        opacity: 0
+        transform: translateY(-10%)
+        transition: transform 0.2s
+        transition-delay: 0.2s
+        .modal-image
+            background-color: #ebebeb
+            width: 60%
+            text-align: center
+            padding: 50px
+            .modal-title
+                font-family: "Bebas Neue", sans-serif
+                font-weight: normal
+                font-size: 24px
+                line-height: 24px
+                margin-top: 0
+                margin-bottom: 25px
+            .floor-image
+                path
+                    opacity: 0
+                    cursor: pointer
+                .current-flat
+                    opacity: 1
+        .modal-info
+            padding: 50px 46px
+            width: 40%
+            .modal-title
+                font-family: "Bebas Neue", sans-serif
+                font-weight: normal
+                font-size: 24px
+                line-height: 24px
+                margin-top: 0
+                margin-bottom: 25px
+            .flat-list
+                padding: 0
+                list-style: none
+                margin-top: 55px
+                .flat-item
+                    margin-bottom: 10px
+                    .flat-link
+                        font-size: 16px
+                        line-height: 19px
+                        color: #635854
+                        text-decoration: none
+                    .current-flat
+                        color: #3596f5
+                        text-decoration: underline
+            .modal-alert
+                font-style: italic
+                font-weight: normal
+                font-size: 16px
+                line-height: 19px
+                color: #635854
+                margin-top: 56px
+        .modal-close-button
+            position: absolute
+            right: 27px
+            top: 38px
+            cursor:
+            border: none
+            background-color: #fff
+            cursor: pointer
+.is-open
+    opacity: 1
+    transform: scale(1)
+    .modal-dialog
+        opacity: 1
+        transform: translateY(0)
